@@ -1,6 +1,7 @@
-﻿using Newtonsoft.Json;
+﻿using System.ComponentModel;
 using System.ComponentModel.DataAnnotations;
 using System.Runtime.CompilerServices;
+using Amica.Models.Resources;
 
 namespace Amica.Models.Company
 {
@@ -36,7 +37,8 @@ namespace Amica.Models.Company
         /// <value>
         /// The name.
         /// </value>
-        [Display(Name = nameof(Resources.PropertyNames.CompanyName), ResourceType = typeof(Resources.PropertyNames))]
+        [Display(Name = nameof(PropertyNames.CompanyName))]
+        [Description(nameof(PropertyDescriptions.CompanyName))]
         public string Name {
 			set { SetProperty (ref _name, value); }
 			get { return _name; } 
@@ -48,6 +50,7 @@ namespace Amica.Models.Company
         /// <value>
         /// The password.
         /// </value>
+        [Description(nameof(PropertyDescriptions.Password))]
         public string Password {
 			set { SetProperty (ref _password, value); }
 			get { return _password; }
@@ -58,7 +61,7 @@ namespace Amica.Models.Company
         /// <value>
         ///   <c>true</c> if this instance is the administrative account; otherwise, <c>false</c>.
         /// </value>
-        [Display(Name = nameof(Resources.PropertyNames.IsAdministrativeAccount), ResourceType = typeof(Resources.PropertyNames))]
+        [Display(Name = nameof(PropertyNames.IsAdministrativeAccount), ResourceType = typeof(PropertyNames))]
 		public bool IsAdministrativeAccount {
 			set { SetProperty (ref _adminAccount, value); }
 			get { return _adminAccount; } 
@@ -79,7 +82,8 @@ namespace Amica.Models.Company
         /// <value>
         /// The fiscal profile.
         /// </value>
-        [Display(Name = nameof(Resources.PropertyNames.FiscalProfile), ResourceType = typeof(Resources.PropertyNames))]
+        [Display(Name = nameof(PropertyNames.FiscalProfile), ResourceType = typeof(PropertyNames))]
+        [Description(nameof(PropertyDescriptions.FiscalProfile))]
         public FiscalProfile FiscalProfile { get; }
         /// <summary>
         /// Gets the company preferences.
@@ -87,7 +91,8 @@ namespace Amica.Models.Company
         /// <value>
         /// The company preferences.
         /// </value>
-        [Display(Name = nameof(Resources.PropertyNames.Preferences), ResourceType = typeof(Resources.PropertyNames))]
+        [Display(Name = nameof(PropertyNames.Preferences), ResourceType = typeof(PropertyNames))]
+        [Description(nameof(PropertyDescriptions.Preferences))]
         public Preferences Preferences { get; }
         /// <summary>
         /// Gets the companyt address.
@@ -95,7 +100,8 @@ namespace Amica.Models.Company
         /// <value>
         /// The companyt address.
         /// </value>
-        [Display(Name = nameof(Resources.PropertyNames.Address), ResourceType = typeof(Resources.PropertyNames))]
+        [Display(Name = nameof(PropertyNames.Address), ResourceType = typeof(PropertyNames))]
+        [Description(nameof(PropertyDescriptions.Address))]
         public AddressEx Address { get; }
     }
 }
